fix (file-preview): position spinner absolute to avoid flickering

--- a/client/src/app/editor/file-preview/file-preview-dialog/file-preview-dialog.component.scss
+++ b/client/src/app/editor/file-preview/file-preview-dialog/file-preview-dialog.component.scss
@@ -39,3 +39,11 @@ ml-dialog-error {
     margin-right: 5px;
   }
 }
+
+md-spinner {
+  position: absolute;
+  top: 50;
+  left: 50;
+  transform: translate(-50%, -50%);
+  z-index: -1;
+}
